<resources>
    <string name="colortu_homework">小兔作业</string>
    <string name="colortu_listen">小兔听写</string>
    <string name="warning_memory">系统空间不足100m,请清理缓存</string>
    <string name="minimum_memory">系统空间不足50m,App停止运行,请清理缓存</string>
    <string name="refused_permission">拒绝授权导致功能无法使用</string>
    <string name="no_networt">当前网络不可用</string>
    <string name="networt_wifi">当前网络为wifi</string>
    <string name="open_wlan">是否开启WLAN</string>
    <string name="networt_mobile">当前网络为移动网络,将使用流量</string>
    <string name="networt_mobile2">当前为非WIFI环境\n是否使用流量</string>
    <string name="rest_message">您已连续使用40分钟，注意休息保护眼睛哦~</string>
    <string name="empty_uuid">用户ID为空,请重新打开APP授权刷新</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="affirm">确认</string>
    <string name="refuse">拒绝</string>
    <string name="cancel">取消</string>
    <string name="agree">同意</string>
    <string name="disagree">不同意</string>
    <string name="skiptip">跳过</string>
    <string name="exit">退出</string>
    <string name="keep">继续</string>
    <string name="input">录入</string>
    <string name="save">保存</string>
    <string name="finish">完成</string>
    <string name="finished">已完成</string>
    <string name="unfinished">待完成</string>
    <string name="edit">编辑</string>
    <string name="filtrate">筛选</string>
    <string name="help">帮助</string>
    <string name="back">返回</string>
    <string name="omit">略</string>
    <string name="chosen">选好了</string>
    <string name="and">与</string>
    <string name="answer">答案</string>
    <string name="not_login">未登录</string>
    <string name="not_login2">未登录~</string>
    <string name="translate">翻译</string>
    <string name="vip">VIP</string>
    <string name="no_vip">非VIP</string>
    <string name="create">创建</string>
    <string name="account">账号</string>
    <string name="choose_account">选择登录账号</string>
    <string name="no_account">没有更多账号</string>
    <string name="switch_account">切换账号</string>
    <string name="mine_message">我的信息</string>
    <string name="login_scancode">微信扫码获取元气</string>
    <string name="pay_scancode">请家长用微信扫码解锁</string>
    <string name="shop_scancode">微信扫码查看元气商城</string>
    <string name="feedback_teaching">小朋友，如果没找到你想要的教辅，可以微信扫码反馈给小兔团队哦~</string>
    <string name="update_study">升级自习室可以邀请更多同学，积分累计加倍</string>
    <string name="pay_success">支付成功</string>
    <string name="jump_login">去登录，得元气</string>
    <string name="recordwork">作业记录</string>
    <string name="recordwork2">记录作业</string>
    <string name="work_history">作业历史</string>
    <string name="none_recordwork">暂无作业记录</string>
    <string name="none_history">暂无历史记录</string>
    <string name="choose_month">选月份</string>
    <string name="choose_month2">选择月份</string>
    <string name="sign_sure">你确定今天的\n【</string>
    <string name="sign_finish">】\n已完成吗？</string>
    <string name="sign_sure2">你确定将今天的\n</string>
    <string name="sign_unfinished">】\n标为未完成吗？</string>
    <string name="delete_work">你确定删除\n此作业项吗？</string>
    <string name="vip_time">您的会员时间仅剩</string>
    <string name="vip_scancode">点击扫码解锁语音翻译功能</string>
    <string name="input_message">按住按钮录入\n松开结束</string>
    <string name="record_message">录音不能小于3秒</string>
    <string name="record_message2">录音不能大于10秒</string>
    <string name="record_message3">录音不能大于30秒</string>
    <string name="record_failure">录音失败</string>
    <string name="record_translate">录音翻译中</string>
    <string name="record_uploadfailure">录音上传失败</string>
    <string name="record_translatefailure">翻译失败</string>
    <string name="save_failure">保存失败</string>
    <string name="choose_subject">请选择科目</string>
    <string name="command">口令</string>
    <string name="none_command">暂无口令</string>
    <string name="homework_commandempty">作业口令不能为空</string>
    <string name="input_command">输入口令</string>
    <string name="share_command">分享作业口令</string>
    <string name="command_message">使用说明：把作业口令告诉你的同学，他输入口令后可以复制你录入的作业哦~\n作业口令一星期有效</string>
    <string name="command_failure">这个口令没有对应的作业记录，问你同学要个对的吧</string>
    <string name="answer_listen">答案\n听力</string>
    <string name="mine_teaching">我的教辅</string>
    <string name="choose_teaching">选教辅</string>
    <string name="choose_teaching2">选教辅和听力</string>
    <string name="none_teaching">暂无教辅和听力</string>
    <string name="delete_teaching">你确定将此\n教辅移除吗？</string>
    <string name="english_listen">英语|听力</string>
    <string name="chinese_math">语文数学</string>
    <string name="update_content">内容更新中</string>
    <string name="check_answer">对答案</string>
    <string name="check_topic">点击查看原题</string>
    <string name="putaway_topic">收起原题</string>
    <string name="not_last">没有上一首</string>
    <string name="not_next">最后一首了</string>
    <string name="semester_last">上</string>
    <string name="semester_next">下</string>
    <string name="subject_chinese">语文</string>
    <string name="subject_math">数学</string>
    <string name="subject_english">英语</string>
    <string name="subject_science">科学</string>
    <string name="subject_music">音乐</string>
    <string name="subject_art">美术</string>
    <string name="subject_morality">品德</string>
    <string name="subject_sport">体育</string>
    <string name="subject_other">其他</string>
    <string name="study_room">自习室</string>
    <string name="study_room2">自\n习\n室</string>
    <string name="study_plaza">自习广场</string>
    <string name="studyroom_group">自习室拼桌</string>
    <string name="official">官方</string>
    <string name="person">私人</string>
    <string name="area">区域</string>
    <string name="grade">年级</string>
    <string name="studyroom_closed">自习室已关闭</string>
    <string name="studyroom_full">自习室人数已满</string>
    <string name="studyroom_timeinvalid">自习室时间已失效</string>
    <string name="studyroom_integral">自习室积分</string>
    <string name="studyroom_integralrule">当自习室由普通会员用户创建,在该自习室中每自习45分钟可获得1元气,自习室创建者可获得5元气;\n
        当自习室由VIP会员用户创建,在该自习室中每自习45分钟可获得5元气,自习室创建者可获得10元气;</string>
    <string name="colortu_recommend">小兔推荐</string>
    <string name="invite_schoolmate">邀请同学</string>
    <string name="study_start">入座自习</string>
    <string name="study_finish">结束自习</string>
    <string name="study_startfailure">入座自习失败</string>
    <string name="study_finishfailure">结束自习失败</string>
    <string name="data_loading">数据加载中,请稍等~</string>
    <string name="study_finishmessage">你确定结束自习室？再次进入自习室需重新计时</string>
    <string name="input_leaveword">录入自习留言</string>
    <string name="not_inputaudio">未录入语音</string>
    <string name="not_choosestate">未选择状态或录入语音</string>
    <string name="mine_studyroom">我的自习室</string>
    <string name="none_studyroom">暂无自习室,请创建</string>
    <string name="mine_create">我创建的</string>
    <string name="mine_join">我加入的</string>
    <string name="mine_past">已过期的</string>
    <string name="studyroom_closedmessage">确定关闭当前自习室?关闭后所有好友都无法进入自习室</string>
    <string name="studyroom_openmessage">确定开启当前自习室?开启后好友可以通过你分享的自习室口令进入你的自习室</string>
    <string name="manually_create">手动创建</string>
    <string name="audio_create">语音创建</string>
    <string name="input_studyroomname">输入自习室名称</string>
    <string name="create_studyroom">创建自习室</string>
    <string name="studyroom_namenone">自习室名称不能为空</string>
    <string name="studyroom_createfailure">自习室创建失败</string>
    <string name="command_invite">口令邀请</string>
    <string name="command_join">口令参加</string>
    <string name="input_command2">请输入口令</string>
    <string name="studyroom_commanderror">自习室口令错误</string>
    <string name="studyroom_commandmpty">自习室口令不能为空</string>
    <string name="studyroom_commandmessage">将上面口令告诉给您的好友,让您的好友在手表上下载小兔作业,进入我的自习室输入口令,即可一起自习!</string>
    <string name="listen">听写</string>
    <string name="choose_grade">选择年级</string>
    <string name="choose_grade2">换年级</string>
    <string name="choose_version">换版本</string>
    <string name="choose_version2">选择教材版本</string>
    <string name="starting">听写即将开始…</string>
    <string name="last_topic">这是第一题，没有上一题了</string>
    <string name="next_topic">已经是最后一题了</string>
    <string name="none_dictation">暂时没有听写内容</string>
    <string name="slow">慢速</string>
    <string name="normal">正常</string>
    <string name="quick">快速</string>
    <string name="fast">飞快</string>
    <string name="grade1">一年级</string>
    <string name="grade2">二年级</string>
    <string name="grade3">三年级</string>
    <string name="grade4">四年级</string>
    <string name="grade5">五年级</string>
    <string name="grade6">六年级</string>
    <string name="version1">-人教版</string>
    <string name="version2">-人教版(三)</string>
    <string name="version3">-冀教版</string>
    <string name="version4">-牛津版</string>
    <string name="version5">-外研社</string>
    <string name="version6">-外研社(三)</string>
    <string name="version7">-北师大</string>
    <string name="version8">-北师大(三)</string>
    <string name="version9">-译林版</string>
    <string name="version10">-冀教版(三)</string>
    <string name="version11">-沪教版</string>
    <string name="version12">-教科版</string>
    <string name="version13">-湖少儿(三)</string>
    <string name="version14">-科普版(三)</string>
    <string name="version15">-陕西版</string>
    <string name="version16">-北京版</string>
    <string name="version17">-闽教版(三)</string>
    <string name="version18">-粤人民(三)</string>
    <string name="mine">我的</string>
    <string name="medal">勋章</string>
    <string name="vitality">元气</string>
    <string name="vitality_value">当前元气值</string>
    <string name="vitality_shop">元气商城</string>
    <string name="vitality_rule">元气规则</string>
    <string name="vitality_event">元气活动</string>
    <string name="colortu_message">小兔的哥哥姐姐们正在连夜赶工设计中......\n敬请期待~</string>
    <string-array name="keyboard1">
        <item>确定</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
    </string-array>
    <string-array name="keyboard2">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>0</item>
        <item>确定</item>
    </string-array>
    <string name="useragreement">用户协议</string>
    <string name="privacypolicy">隐私政策</string>
    <string name="agreement_policy">协议与政策</string>
    <string name="work_agreement_content">欢迎使用小兔作业！\n在您使用小兔作业前,请认真阅读小兔作业《用户协议》
        与《隐私政策》,以了解用户权利义务和个人信息处理规则。点击同意表示您已阅读并认可所有条款！</string>
    <string name="work_agreement_agree">您需同意后才能继续使用小兔作业提供的服务</string>
    <string name="listen_agreement_content">欢迎使用小兔听写！\n在您使用小兔听写前,请认真阅读小兔听写《用户协议》
        与《隐私政策》,以了解用户权利义务和个人信息处理规则。点击同意表示您已阅读并认可所有条款！</string>
    <string name="listen_agreement_agree">您需同意后才能继续使用小兔听写提供的服务</string>
</resources>