<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.colortu.colortu_module.colortu_base.core.viewmodel.RestTimesViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/resttimes_parentview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_black1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_30"
            android:background="@drawable/base_white1_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/resttimes_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/dimen_20"
                android:layout_marginTop="@dimen/dimen_30"
                android:layout_marginRight="@dimen/dimen_20"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/rest_message"
                android:textColor="@color/base_black1"
                android:textSize="@dimen/size_30"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_50"
                android:layout_marginBottom="@dimen/dimen_30"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/resttimes_exit"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:layout_weight="1"
                    android:background="@drawable/base_blue2_bg"
                    android:gravity="center"
                    android:text="@string/exit"
                    android:textColor="@color/base_white1"
                    android:textSize="@dimen/size_25"></TextView>

                <TextView
                    android:id="@+id/resttimes_keep"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:layout_weight="1"
                    android:background="@drawable/base_blue1_bg"
                    android:gravity="center"
                    android:text="@string/keep"
                    android:textColor="@color/base_white1"
                    android:textSize="@dimen/size_25"></TextView>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</layout>