<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.colortu.colortu_module.colortu_teach.viewmodel.TeachMainViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/teachmain_parentview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_black1"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_70"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/teachmain_chooseteachbook"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|left"
                android:onClick="@{()->viewmodel.onChooseTeachBook()}"
                android:paddingLeft="@dimen/dimen_10"
                android:text="@string/choose_teaching"
                android:textColor="@color/base_blue9"
                android:textSize="@dimen/size_26"
                android:visibility="invisible"></TextView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:lines="1"
                android:text="@string/mine_teaching"
                android:textColor="@color/base_white1"
                android:textSize="@dimen/size_30"></TextView>

            <TextView
                android:id="@+id/teachmain_edit"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical|right"
                android:onClick="@{()->viewmodel.onEdit()}"
                android:paddingRight="@dimen/dimen_10"
                android:text="@{viewmodel.edit}"
                android:textColor="@color/base_blue9"
                android:textSize="@dimen/size_26"
                android:visibility="invisible"></TextView>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/teachmain_minenone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/none_teaching"
                android:textColor="@color/base_white1"
                android:textSize="@dimen/size_40"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_100"
                android:background="@color/base_blue7"
                android:gravity="center"
                android:onClick="@{()->viewmodel.onChooseTeachBook()}"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_teaching2"
                    android:textColor="@color/base_white1"
                    android:textSize="@dimen/size_30"
                    android:textStyle="bold"></TextView>

                <ImageView
                    android:layout_width="@dimen/dimen_10"
                    android:layout_height="@dimen/dimen_15"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:scaleType="fitXY"
                    android:src="@mipmap/icon_teach_whiteright"></ImageView>
            </LinearLayout>

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/teachmain_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never"
            android:scrollbars="none"
            android:visibility="gone"></androidx.recyclerview.widget.RecyclerView>
    </LinearLayout>
</layout>