<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewmodel"
            type="com.colortu.colortu_module.colortu_base.core.viewmodel.NetWorkViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/network_parentview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_black1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/dimen_20"
            android:background="@drawable/base_yellow1_bg"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/network_title"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="@dimen/dimen_20"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="@dimen/dimen_10"
                android:text="@string/networt_mobile2"
                android:textColor="@color/base_brown1"
                android:textSize="@dimen/size_30"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_10"
                android:layout_marginBottom="@dimen/dimen_20"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/network_disagree"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_70"
                    android:layout_marginLeft="@dimen/dimen_20"
                    android:layout_marginRight="@dimen/dimen_10"
                    android:layout_weight="1"
                    android:background="@drawable/base_blue2_bg"
                    android:gravity="center"
                    android:onClick="@{()->viewmodel.onDisagree()}"
                    android:text="@string/disagree"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_30"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:id="@+id/network_agree"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/dimen_70"
                    android:layout_marginLeft="@dimen/dimen_10"
                    android:layout_marginRight="@dimen/dimen_20"
                    android:layout_weight="1"
                    android:background="@drawable/base_blue1_bg"
                    android:gravity="center"
                    android:onClick="@{()->viewmodel.onAgree()}"
                    android:text="@string/agree"
                    android:textColor="@color/white"
                    android:textSize="@dimen/size_30"
                    android:textStyle="bold"></TextView>

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>